2008-08-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c,
	* src/z80/peeph-z80.def: minor peephole improvement


2008-08-15 Raphael Neider <rneider AT web.de>

	* src/z80/gen.c (_vemit2): suppress compiler warning

	* src/pic/*.[ch]: make proper use of header files and avoid
	  ad-hoc extern declarations, mark module-local helpers 'static',
	  removed dead/replaced code, no functional changes
	* src/pic16/pcode.c: disentangled from pic14 backend

2008-08-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c: fixed #2051348
	* support/regression/tests/bug-2051348.c: regression test for #2051348

2008-08-10 Raphael Neider <rneider AT web.de>

	* configure.in,
	* Makefile.common.in: export PACKAGE for $docdir,
	  fixes #1957036, avoid some "underquoted definition" warnings
	* configure: regenerated

2008-08-10 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/**: build pic16 library using autotools for
	  improved dependency tracking

	* device/lib/Makefile.in,
	* src/pic16/main.c,
	* support/scripts/sdcc.nsi: adapt to changes in filenames (s/.lib/.a/)

2008-08-10 Raphael Neider <rneider AT web.de>

	* src/pic/pcode.c (ReuseReg): do not overlay the registers used for
	  local variables if --nooverlay is given, workaround for #2023121

2008-08-08 Raphael Neider <rneider AT web.de>

	* src/pic16/genarith.c (genAddLit): fix structure access (#1888004)

2008-08-08 Raphael Neider <rneider AT web.de>

	* src/pic/pcoderegs.c,
	* src/pic/pcode.c,
	* src/pic16/pcode.c: replace own SAFE_snprintf with common SNPRINTF

2008-08-07 Borut Razem <borut.razem AT siol.net>

	* src/SDCCval.c, src/SDCCmain.c, src/SDCC.lex,
	  device/lib/pic/Makefile.rules, device/lib/ds390/Makefile.in,
	  device/lib/ds400/Makefile.in, device/lib/hc08/Makefile.in,
	  support/cpp/libcpp/lex.c,  doc/sdccman.lyx:
	  applied modified patch 2038174: Add support for binary constants v2
	  thanks Mauro Giachero
	* .version, doc/sdccman.lyx: bumped sdcc version to 2.8.3
